# build-sfml-imgui

./: CMakeLists.txt  CMakePresets.json  readme.md
dependencies/imgui/: CMakeLists.txt  imgui.cpp  imgui_draw.cpp  imgui_internal.h
src/: main.cpp
